<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Fill"
    android:layout_marginLeft="5sp"
    android:layout_marginRight="5sp"
    android:orientation="vertical" >

    <LinearLayout 
      style="@style/Fill.Width"
      android:layout_marginBottom="5sp"
      android:layout_marginTop="5sp"
      android:orientation="horizontal"        
    >
      <TextView style="@style/Wrap" android:text="@string/stop" android:textStyle="bold" android:textSize="22sp"/>
      <Spinner android:id="@+id/stopSpinner" style="@style/Fill.Width"/>
    </LinearLayout>

    <TextView
        style="@style/Fill.Width"
        android:text="@string/inbound"
        android:textSize="22sp"
        android:textStyle="bold" />

    <View style="@style/BlueLine" />

    <TableLayout
        android:id="@+id/tblInbound"
        style="@style/Fill"
        android:layout_weight=".5" />

    <TextView
        style="@style/Fill.Width"
        android:text="@string/outbound"
        android:textSize="22sp"
        android:textStyle="bold" />

    <View style="@style/BlueLine" />

    <TableLayout
        android:id="@+id/tblOutbound"
        style="@style/Fill"
        android:layout_weight=".5" />

    <LinearLayout
        style="@style/Fill.Width"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtStopLineInfo"
            style="@style/Wrap"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLastUpdated"
            style="@style/Fill.Width"
            android:gravity="right" />
    </LinearLayout>

    <TextView
        android:id="@+id/disclaimer"
        style="@style/Fill.Width"
        android:clickable="true"
        android:text="@string/disclaimer"
        android:textStyle="bold" />

</LinearLayout>